--- a/.gitignore
+++ b/.gitignore
@@ -1,26 +1,26 @@
+# Node modules (bibliotecas instaladas com npm/yarn)
+node_modules/
+
+# Build output (gerado quando você roda "npm run build")
+dist/
+
+# Arquivos de ambiente (contêm chaves secretas)
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
 # Logs
-logs
-*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
-*.local
-
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
+# Sistema / IDE
 .DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+Thumbs.db
+.vscode/
+.idea/
 
-.env
+# Cache
+.cache/
